<resources>
    <string name="app_name">MasHogarSupervisor</string>
    <string name="lbl_iniciar">INICIAR SESION COMO</string>
    <string name="lbl_ingresar_pas">INGRESAR CLAVE DE ACCESO</string>
    <string name="lbl_persona_supervisor">SUPERVISOR</string>
    <string name="lbl_persona_cobrador">COBRADOR</string>
    <string name="lbl_persona_invitado">INVITADO</string>
    <string name="lbl_dato_busca">DATO A BUSCAR</string>
    <string name="lbl_error_dato">ERROR EN DATO</string>
    <string name="lbl_clave">CLAVE </string>
    <string name="lbl_articulo">ARTICULO </string>
    <string name="lbl_descripcion">DESCRIPCION </string>
    <string name="lbl_venta">VENTA </string>
    <string name="lbl_ruta">RUTA </string>
    <string name="lbl_direccion">DIRECCION </string>
    <string name="lbl_cliente">CLIENTE </string>
    <string name="lbl_nombre">NOMBRE </string>
    <string name="lbl_boedga">BODEGA </string>
    <string name="lbl_puesto">PUESTO </string>
    <string name="lbl_fecha">FECHA </string>
    <string name="lbl_plazo">PLAZO </string>
    <string name="lbl_vence">VENCE </string>
    <string name="lbl_estado_bien">BIEN </string>
    <string name="lbl_estado_vencida">VENCIDA </string>
    <string name="lbl_estado_atencion">ATENCION </string>
    <string name="lbl_estado_lista1">LISTA 1</string>
    <string name="lbl_estado_lista2">LISTA 2</string>
    <string name="lbl_estado_lista3">LISTA 3</string>
    <string name="lbl_total">TOTAL </string>
    <string name="lbl_enganche">ENGANCHE </string>
    <string name="lbl_descuento">DESCUENTO </string>
    <string name="lbl_saldo">SALDO </string>
    <string name="lbl_pagos_de">PAGOS EN CONTRATO DE </string>
    <string name="lbl_pagos_recomendado">PAGO RECOMENDADO </string>
    <string name="lbl_pva">PAGO VENCIDOS ACTUAL </string>
    <string name="lbl_pvg">PAGOS VENCIDOS GUARDADOS </string>
    <string name="lbl_forma_1">SEMANAL</string>
    <string name="lbl_forma_2">QUINCENAL</string>
    <string name="lbl_forma_3">MENSUAL</string>
    <string name="lbl_forma_mes1">1 MES</string>
    <string name="lbl_forma_mes2">2 MESES</string>
    <string name="lbl_forma_mes3">3 MESES</string>
    <string name="lbl_forma_mes4">4 MESES</string>
    <string name="lbl_forma_mes5">5 MESES</string>
    <string name="lbl_forma_mes6">6 MESES</string>
    <string name="lbl_forma_mes7">7 MESES</string>
    <string name="lbl_forma_mes8">8 MESES</string>
    <string name="lbl_forma_mes9">9 MESES</string>
    <string name="lbl_forma_mes10">10 MESES</string>
    <string name="lbl_forma_mes11">11 MESES</string>
    <string name="lbl_forma_mes12">12 MESES</string>
    <string name="lbl_forma_contado">CONTADO </string>
    <string name="lbl_forma_mayoreo">MAYOREO </string>
    <string name="lbl_forma_comicion">COMICION </string>
    <string name="lbl_conyuge">CONYUGE</string>
    <string name="lbl_ref1">REF 1</string>
    <string name="lbl_ref2">REF 2</string>
    <string name="lbl_aval">AVAL</string>
    <string name="lbl_agregar_pago">AGREGAR PAGO</string>
    <string name="lbl_agregar_indicacion">AGREGAR INDICACION</string>
    <string name="lbl_bueno_por">BUENO POR</string>
    <string name="lbl_resta">RESTA</string>
    <string name="lbl_saldo_nuevo">SALDO NUEVO</string>
    <string name="lbl_pass">PASS</string>
    <string name="lbl_agregar_ruta">AGREGAR RUTA</string>
    <string name="lbl_guardar">GUARDAR</string>
    <string name="lbl_modificar">MODIFICAR</string>
    <string name="lbl_eliminar">ELIMINAR DATOS</string>
    <string name="lbl_recibo">RECIBO</string>
    <string name="lbl_articulos">ARTICULOS</string>
    <string name="lbl_bajar">BAJAR</string>
    <string name="lbl_subir">SUBIR</string>
    <string name="lbl_ultima_actualizacion">ULTIMA ACTUALIZACION</string>
    <string name="lbl_estado_subir">ESTADO SUBIR</string>
    <string name="lbl_estado_pendiente">ESTADO PENDIENTE</string>
</resources>
